--- a/icfp2023-inference-tricks.cabal
+++ b/icfp2023-inference-tricks.cabal
@@ -29,3 +29,13 @@ library no-inference
 
     hs-source-dirs:   example/no-inference
     default-language: GHC2021
+
+library the-proof
+    exposed-modules: NoInference
+    build-depends:
+        base ^>=4.16.4.0,
+        icfp2023-inference-tricks,
+        cleff
+
+    hs-source-dirs:   example/the-proof
+    default-language: GHC2021
